<resources>

    <string name="app_name">CrazyPonyControl</string>
    <string name="title_activity_main">CrazyPony</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="bluetooth_scan_title">Bluetooth Scan</string>
    <string name="bluetooth_scan">Scaning the bluetooth device</string>
    
    <string name="send">Send</string>
    
    <string name="action_bluetooth">Bluetooth</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_radio_scan">Radio Scan</string>
    <string name="menu_preferences">Preferences</string>
    <string name="preferences_title">CrazyPony Control Preferences</string>
    <string name="preferences_category_connection">Connection Preferences</string>
    <string name="preferences_radio_channel">Radio channel</string>
    <string name="preferences_radio_channel_summary">Set the radio channel</string>
    <string name="preferences_radio_datarate">Radio datarate</string>
    <string name="preferences_radio_datarate_summary">Set the radio datarate</string>
    <string name="preferences_radio_datarate_defaultValue">0</string>
    <string name="preferences_radio_channel_defaultValue">10</string>
    <string name="preferences_category_control">Control preferences</string>
    <string name="preferences_mode">Mode</string>
    <string name="preferences_mode_defaultValue">3</string>
    <string name="preferences_deadzone">Deadzone</string>
    <string name="preferences_deadzone_defaultValue">0.1</string>
    <string name="preferences_rolltrim">Roll trim</string>
    <string name="preferences_pitchtrim">Pitch trim</string>
    <string name="preferences_trim_defaultValue">0.0</string>
    <string name="preferences_advancedflightcontrol">Advanced flight control</string>
    <string name="preferences_afc_title">Advanced flight control preferences</string>
    <string name="preferences_maxRollPitchAngle_title">Max roll/pitch angle</string>
    <string name="preferences_maxRollPitchAngle_defaultValue">20</string>
    <string name="preferences_maxYawAngle_title">Max yaw angle</string>
    <string name="preferences_maxYawAngle_defaultValue">150</string>
    <string name="preferences_maxThrust_title">Max thrust (%)</string>
    <string name="preferences_maxThrust_defaultValue">80</string>
    <string name="preferences_minThrust_title">Min thrust (%)</string>
    <string name="preferences_minThrust_defaultValue">25</string>
    <string name="preferences_reset_afc_title">Reset values</string>
    <string name="preferences_reset_afc_summary">Reset to default values</string>
    <string name="preferences_afc_bool_summary_on">Crazy mode. Use at your own risk!</string>
    <string name="preferences_afc_bool_summary_off">Normal mode</string>
    <string name="preferences_xmode_title">X-Mode</string>
    <string name="preferences_xmode_summary">Client X-mode</string>
    <string name="preferences_btn_title">Gamepad axis and button mapping</string>
    <string name="preferences_category_axes">Axes</string>
    <string name="preferences_right_analog_x_axis_title">Right analog X axis</string>
    <string name="preferences_right_analog_x_axis_defaultValue">AXIS_Z</string>
    <string name="preferences_right_analog_y_axis_title">Right analog Y axis</string>
    <string name="preferences_right_analog_y_axis_defaultValue">AXIS_RZ</string>
    <string name="preferences_left_analog_x_axis_title">Left analog X axis</string>
    <string name="preferences_left_analog_x_axis_defaultValue">AXIS_X</string>
    <string name="preferences_left_analog_y_axis_title">Left analog Y axis</string>
    <string name="preferences_left_analog_y_axis_defaultValue">AXIS_Y</string>
    <string name="preferences_splitaxis_yaw_bool_summary">Use split axis control for yaw</string>
    <string name="preferences_splitaxis_yaw_bool_title">Yaw split axis</string>
    <string name="preferences_splitaxis_yaw_left_axis_title">Yaw split axis - left axis</string>
    <string name="preferences_splitaxis_yaw_left_axis_defaultValue">AXIS_BRAKE</string>
    <string name="preferences_splitaxis_yaw_right_axis_title">Yaw split axis - right axis</string>
    <string name="preferences_splitaxis_yaw_right_axis_defaultValue">AXIS_GAS</string>
    <string name="preferences_axis_mapping_dialog_text">Please move a joystick axis...</string>
    <string name="preferences_category_buttons">Buttons</string>
    <string name="preferences_emergency_btn_title">Emergency stop</string>
    <string name="preferences_emergency_btn_defaultValue">KEYCODE_BUTTON_B</string>
    <string name="preferences_rolltrim_plus_btn_title">Roll trim +</string>
    <string name="preferences_rolltrim_plus_btn_defaultValue">KEYCODE_DPAD_RIGHT</string>
    <string name="preferences_rolltrim_minus_btn_title">Roll trim -</string>
    <string name="preferences_rolltrim_minus_btn_defaultValue">KEYCODE_DPAD_LEFT</string>
    <string name="preferences_pitchtrim_plus_btn_title">Pitch trim +</string>
    <string name="preferences_pitchtrim_plus_btn_defaultValue">KEYCODE_DPAD_UP</string>
    <string name="preferences_pitchtrim_minus_btn_title">Pitch trim -</string>
    <string name="preferences_pitchtrim_minus_btn_defaultValue">KEYCODE_DPAD_DOWN</string>
    <string name="preferences_reset_btn_title">Reset values</string>
    <string name="preferences_reset_btn_summary">Reset to default values</string>
    <string name="preferences_button_mapping_dialog_text">Please press a button...</string>
    <string name="preferences_category_app_settings">App Preferences</string>
    <string name="preferences_screen_rotation_lock_title">Screen rotation lock</string>
    <string name="select_connection_dialog_title">Select Connection</string>
    <string name="pitch">Pitch: %1$s</string>
    <string name="roll">Roll: %1$s</string>
    <string name="thrust">Thrust: %1$s</string>
    <string name="yaw">Yaw: %1$s</string>
    <string name="linkQuality">Link: %1$s</string>

</resources>